--- a/.github/workflows/screenshot-and-visitor.yaml
+++ b/.github/workflows/screenshot-and-visitor.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
+          sudo apt-get install -y google-chrome-stable jq
 
       - name: Install Node.js dependencies
         run: |
@@ -57,6 +57,49 @@ jobs:
           fi
         env:
           PUPPETEER_SKIP_DOWNLOAD: true
+
+      - name: Manage likes system
+        run: |
+          if [ ! -f "likes-data.json" ]; then
+            echo '{"total_likes":0,"unique_users":[],"created_at":"","last_updated":""}' > likes-data.json
+          fi
+
+          CURRENT_LIKES=$(jq -r '.total_likes' likes-data.json)
+          CURRENT_USERS=$(jq -r '.unique_users[]' likes-data.json)
+
+          if [ "${{ github.event.inputs.add_like }}" = "true" ]; then
+            USER="${{ github.actor }}"
+            if echo "$CURRENT_USERS" | grep -q "$USER"; then
+              echo "LIKE_STATUS=already_liked" >> $GITHUB_ENV
+              echo "⚠️ $USER already liked this project!"
+            else
+              jq --arg user "$USER" --arg date "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
+                '.total_likes += 1 | .unique_users += [$user] | .last_updated = $date | if .created_at == "" then .created_at = $date else . end' \
+                likes-data.json > tmp.json && mv tmp.json likes-data.json
+              echo "LIKE_STATUS=added" >> $GITHUB_ENV
+              echo "💖 New like from $USER!"
+            fi
+          fi
+
+          CURRENT_LIKES=$(jq -r '.total_likes' likes-data.json)
+          echo "{\"schemaVersion\":1,\"label\":\"❤️ likes\",\"message\":\"$CURRENT_LIKES\",\"color\":\"${{ env.LIKES_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > likes-count.json
+
+      - name: Update visitor count
+        run: |
+          if [ ! -f "visitor-data.json" ]; then
+            echo '{"unique_visitors":1,"last_updated":"","fallback_mode":true}' > visitor-data.json
+          fi
+
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ github.actor }}" != "github-actions[bot]" ]; then
+            CURRENT=$(jq -r '.unique_visitors' visitor-data.json)
+            NEW=$((CURRENT + 1))
+            jq --arg count "$NEW" --arg date "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
+              '.unique_visitors = ($count | tonumber) | .last_updated = $date' \
+              visitor-data.json > tmp.json && mv tmp.json visitor-data.json
+          fi
+
+          CURRENT_VISITORS=$(jq -r '.unique_visitors' visitor-data.json)
+          echo "{\"schemaVersion\":1,\"label\":\"👀 views\",\"message\":\"$CURRENT_VISITORS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
 
       - name: Create screenshot script
         run: |
@@ -131,97 +174,38 @@ jobs:
           GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
           SCREENSHOT_SELECTOR: ${{ github.event.inputs.screenshot_selector }}
 
-      - name: Manage likes system
-        run: |
-          # Initialize likes data
-          if [ ! -f "likes-data.json" ]; then
-            echo '{"total_likes":0,"unique_users":[],"created_at":"","last_updated":""}' > likes-data.json
-          fi
-
-          # Get current data
-          CURRENT_LIKES=$(jq -r '.total_likes' likes-data.json)
-          CURRENT_USERS=$(jq -r '.unique_users[]' likes-data.json)
-
-          # Handle like request
-          if [ "${{ github.event.inputs.add_like }}" = "true" ]; then
-            USER="${{ github.actor }}"
-            
-            if echo "$CURRENT_USERS" | grep -q "$USER"; then
-              echo "LIKE_STATUS=already_liked" >> $GITHUB_ENV
-              echo "⚠️ $USER already liked this project!"
-            else
-              NEW_LIKES=$((CURRENT_LIKES + 1))
-              jq --arg user "$USER" --arg date "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
-                '.total_likes += 1 | .unique_users += [$user] | .last_updated = $date | if .created_at == "" then .created_at = $date else . end' \
-                likes-data.json > tmp.json && mv tmp.json likes-data.json
-              
-              echo "LIKE_STATUS=added" >> $GITHUB_ENV
-              echo "💖 New like from $USER! Total: $NEW_LIKES"
-            fi
-          fi
-
-          # Update likes badge
-          CURRENT_LIKES=$(jq -r '.total_likes' likes-data.json)
-          echo "{\"schemaVersion\":1,\"label\":\"❤️ likes\",\"message\":\"$CURRENT_LIKES\",\"color\":\"${{ env.LIKES_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > likes-count.json
-
-      - name: Update visitor count
-        run: |
-          # Fallback visitor count system
-          if [ ! -f "visitor-data.json" ]; then
-            echo '{"unique_visitors":1,"last_updated":"","fallback_mode":true}' > visitor-data.json
-          fi
-
-          # Increment if manual run by user
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ github.actor }}" != "github-actions[bot]" ]; then
-            CURRENT=$(jq -r '.unique_visitors' visitor-data.json)
-            NEW=$((CURRENT + 1))
-            jq --arg count "$NEW" --arg date "$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
-              '.unique_visitors = ($count | tonumber) | .last_updated = $date' \
-              visitor-data.json > tmp.json && mv tmp.json visitor-data.json
-          fi
-
-          CURRENT_VISITORS=$(jq -r '.unique_visitors' visitor-data.json)
-          echo "{\"schemaVersion\":1,\"label\":\"👀 views\",\"message\":\"$CURRENT_VISITORS\",\"color\":\"${{ env.BADGE_COLOR }}\",\"style\":\"${{ env.BADGE_STYLE }}\"}" > visitor-count.json
-
       - name: Update README
         run: |
           REPO_URL="https://raw.githubusercontent.com/${{ github.repository }}/main"
           LIKES=$(jq -r '.total_likes' likes-data.json)
           VIEWS=$(jq -r '.unique_visitors' visitor-data.json)
+          WORKFLOW_FILE=$(basename $GITHUB_WORKFLOW)
 
-          # Create interactive like button
-          cat > like-button.md << 'EOF'
-          [![❤️ Like this project?](https://img.shields.io/badge/dynamic/json?url=${REPO_URL}/likes-count.json&query=%24.message&label=%F0%9F%92%96%20Likes&color=red&style=for-the-badge)](https://github.com/${{ github.repository }}/actions/workflows/screenshot-and-visitor.yml?query=workflow%3A%22Screenshot+%26+Unique+Visitor%2FLikes+System%22)
+          cat > like-button.md << EOF
+          [![❤️ Like this project?](https://img.shields.io/badge/dynamic/json?url=${REPO_URL}/likes-count.json&query=%24.message&label=%F0%9F%92%96%20Likes&color=red&style=for-the-badge)](https://github.com/${{ github.repository }}/actions/workflows/${WORKFLOW_FILE}?add_like=true)
           EOF
 
-          # Generate new README
           {
             echo "# ${{ github.event.repository.name }}"
             echo ""
-            echo "![Views](https://img.shields.io/endpoint?url=${REPO_URL}/visitor-count.json)"
+            echo "[![👀 Views](https://img.shields.io/endpoint?url=${REPO_URL}/visitor-count.json)](https://github.com/${{ github.repository }}/graphs/traffic)"
             cat like-button.md
             echo ""
-            
             if [ -f "README_template.md" ]; then
               cat README_template.md
             else
-              echo "## 💖 How to like this project:"
-              echo "1. Click the red heart button above"
-              echo "2. Click \"Run workflow\""
-              echo "3. Check \"Add your like\""
-              echo "4. Click \"Run workflow\" again"
-              echo ""
               echo "## 📊 Stats"
               echo "- Total likes: ${LIKES}"
               echo "- Unique visitors: ${VIEWS}"
+              echo ""
+              echo "![Latest Screenshot](screenshot.png)"
             fi
           } > README.md
 
-      - name: Commit changes
+      - name: Commit changes immediately
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
           git add .
-          git commit -m "📊 Update stats: ${VIEWS} views, ${LIKES} likes [skip ci]" || exit 0
+          git commit -m "📊 Immediate update with new screenshot: ${VIEWS} views, ${LIKES} likes" || exit 0
           git push
