--- a/.github/workflows/screenshot-and-visitor.yaml
+++ b/.github/workflows/screenshot-and-visitor.yaml
@@ -13,6 +13,11 @@ on:
         default: true
         type: boolean
 
+permissions:
+  contents: write
+  pages: read
+  actions: read
+
 env:
   BADGE_STYLE: 'for-the-badge'
   BADGE_COLOR: 'brightgreen'
@@ -399,16 +404,16 @@ jobs:
 
       - name: 📤 Commit and deploy
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "📊 Auto-update: visitors, likes, and screenshot" || exit 0
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
           echo "🔄 Triggering updates..."
-          if curl -s -f -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+          if curl -s -f -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/pages" >/dev/null 2>&1; then
-            curl -s -X POST -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+            curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               "https://api.github.com/repos/${{ github.repository }}/pages/builds" >/dev/null || true
           fi
 
